# progr-cauce-grafico

./: README.md
fuentes/escritorio/: README.md
fuentes/escritorio/builds/linux/: CMakeLists.txt  lanzar-con-nvidia.sh  workspace.code-workspace
fuentes/escritorio/builds/macos/: CMakeLists.txt  workspace.code-workspace
fuentes/escritorio/builds/windows/: CMakeLists.txt
fuentes/escritorio/src/cpp/: androide.cpp  androide.h  animacion.cpp  animacion.h  aplic-2d.cpp  aplic-2d.h  aplic-3d.cpp  aplic-3d.h  aplic-base.cpp  aplic-base.h  camara.cpp  camara.h  cauce-2d.cpp  cauce-2d.h  cauce-3d.cpp  cauce-3d.h  cauce-base.cpp  cauce-base.h  colecciones-objs.cpp  colecciones-objs.h  fbo.cpp  fbo.h  grafo-escena.cpp  grafo-escena.h  grafo-sp.cpp  grafo-sp.h  latapeones.cpp  latapeones.h  lector-jpg.cpp  lector-jpg.h  lector-ply.cpp  lector-ply.h  main.cpp  malla-ind.cpp  malla-ind.h  malla-revol.cpp  malla-revol.h  malla-sp.cpp  malla-sp.h  materiales-luces.cpp  (+19 more)
fuentes/escritorio/src/shaders/: cauce33-2D-frag.glsl  cauce33-2D-vert.glsl  cauce33-2Dsegm-frag.glsl  cauce33-2Dsegm-geom.glsl  cauce33-2Dsegm-vert.glsl  cauce33-3D-frag.glsl  cauce33-3D-vert.glsl  cauce4-3D-frag.glsl  cauce4-3D-geom.glsl  cauce4-3D-tess-control.glsl  cauce4-3D-tess-eval.glsl  cauce4-3D-vert.glsl
fuentes/moviles/: README-crea.md  README-ejec.md  README.md
fuentes/moviles/creacion-proyecto/: README.md
fuentes/moviles/proyecto-as/: README.md
fuentes/moviles/proyecto-as/AppPCGMoviles/: settings.gradle.kts
fuentes/moviles/proyecto-as/AppPCGMoviles/app/: build.gradle.kts
fuentes/moviles/proyecto-as/AppPCGMoviles/app/src/androidTest/java/ugr/mds/pcg/movi/: ExampleInstrumentedTest.kt
fuentes/moviles/proyecto-as/AppPCGMoviles/app/src/main/: AndroidManifest.xml
fuentes/moviles/proyecto-as/AppPCGMoviles/app/src/main/java/ugr/mds/pcg/movi/: MainActivity.kt
fuentes/moviles/proyecto-as/AppPCGMoviles/app/src/main/java/ugr/mds/pcg/movi/ui/theme/: Color.kt  Theme.kt  Type.kt
fuentes/moviles/proyecto-as/AppPCGMoviles/app/src/main/res/values/: strings.xml  themes.xml
fuentes/moviles/proyecto-as/AppPCGMoviles/app/src/test/java/ugr/mds/pcg/movi/: ExampleUnitTest.kt
fuentes/moviles/proyecto-as/AppPCGMoviles/gradle/wrapper/: gradle-wrapper.properties
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/: settings.gradle.kts
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/: build.gradle.kts
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/androidTest/java/mds/pcg1/: ExampleInstrumentedTest.kt
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/main/: AndroidManifest.xml
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/main/java/mds/pcg1/: MainActivity.kt  utilidades.kt
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/main/java/mds/pcg1/ui/theme/: Type.kt
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/main/java/mds/pcg1/vec_mat/: vec_mat.kt
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/main/res/values/: strings.xml  themes.xml
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/app/src/test/java/mds/pcg1/: ExampleUnitTest.kt
fuentes/moviles/proyecto-as/App_Android_PCG_v1.proyecto_AS/gradle/wrapper/: gradle-wrapper.properties
fuentes/moviles/proyecto.android-studio/app/src/main/: AndroidManifest.xml
fuentes/moviles/proyecto.android-studio/app/src/main/assets/plys/: test.ply
fuentes/moviles/proyecto.android-studio/app/src/main/assets/shaders/: .gitignore  gles2_fragment_shader.glsl  gles2_vertex_shader.glsl  gles3_fragment_shader.glsl  gles3_vertex_shader.glsl
fuentes/moviles/proyecto.android-studio/app/src/main/java/mds/pcg1/: MainActivity.kt  aplicacion.kt  camaras.kt  cauce.kt  fuentes-luz.kt  gl-surface.kt  gls-view.kt  grafo-escena.kt  malla-ind.kt  malla-ply.kt  material.kt  objeto-comp.kt  objeto-visu.kt  texturas.kt  utilidades.kt  vaos-vbos.kt  vec-mat.kt
fuentes/moviles/proyecto.android-studio/app/src/main/java/mds/pcg1/ui/theme/: Color.kt  Theme.kt
fuentes/moviles/proyecto.android-studio/app/src/main/java/mds/pcg1/vec_mat/: vec_mat.kt
fuentes/provincias-espana/: README.md  analizador-v2.py  analizador.py  makefile  provincias-espana.txt
fuentes/web/: README.md  readme.md  workspace.code-workspace
fuentes/web/public_html/: index.html
fuentes/web/public_html/css/: main.css
fuentes/web/public_html/glsl/: cauce_3_00_fragment_shader.glsl  cauce_3_00_vertex_shader.glsl
fuentes/web/public_html/imgs/: uv-checker-1.txt  uv-checker-2.txt
fuentes/web/scripts/: comp-lanzar.ps1  comp-lanzar.sh  makefile
fuentes/web/src-ts/: animaciones.ts  aplicacion-pcg.ts  aplicacion-web.ts  camaras.ts  cauce-base.ts  cauce.ts  controles.ts  framebuffer-obj.ts  fuente-luz.ts  grafo-escena.ts  malla-ind.ts  malla-ply.ts  malla-sup-par.ts  material.ts  obj-compuesto.ts  objeto-anim.ts  objeto-comp.ts  objeto-visu.ts  program-obj.ts  shader-obj.ts  sombras.ts  sup-par.ts  texturas.ts  utilidades.ts  vaos-vbos.ts  vec-mat.ts
varios/provincias-espana/: provincias-espana-v2.txt
